<?xml version="1.0" encoding="utf-8"?>
<com.mail.ann.view.MessageHeader xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Color chip -->
        <View
            android:id="@+id/chip"
            android:layout_width="8dip"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:background="#FF1976D2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textAppearance="@style/TextAppearance.K9.Medium"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    tools:text="(no subject)" />

                <ImageView
                    android:id="@+id/crypto_status_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackground"
                    android:padding="6dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/status_lock_disabled"
                    app:tint="?attr/openpgp_grey" />

                <CheckBox
                    android:id="@+id/flagged"
                    style="@style/MessageStarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="false"
                    android:focusable="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.mail.ann.ui.ContactBadge
                        android:id="@+id/contact_badge"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        tools:src="@drawable/ic_contact_picture" />

                    <!-- State icons -->
                    <LinearLayout
                        android:id="@+id/icon_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/contact_badge"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dip"
                        android:layout_marginBottom="2dip"
                        android:orientation="vertical">

                        <View
                            android:id="@+id/answered"
                            android:layout_width="32sp"
                            android:layout_height="32sp"
                            android:background="?attr/messageListAnswered"
                            android:paddingStart="0dp"
                            android:paddingEnd="2dp" />

                        <View
                            android:id="@+id/forwarded"
                            android:layout_width="22sp"
                            android:layout_height="22sp"
                            android:background="?attr/messageListForwarded"
                            android:paddingStart="0dp"
                            android:paddingEnd="4dp" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:padding="6dip">

                    <!-- From -->
                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/status_icon_strip"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_toStartOf="@+id/status_icon_strip"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:paddingStart="0dp"
                        android:paddingTop="0dp"
                        android:paddingEnd="6dp"
                        android:singleLine="true"
                        android:text="@string/general_no_sender"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold" />

                    <!-- Sender -->
                    <TextView
                        android:id="@+id/sender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/from"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/status_icon_strip"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:paddingTop="0dp"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <!-- To -->
                    <TextView
                        android:id="@+id/to_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/to"
                        android:layout_alignStart="@+id/from"
                        android:paddingStart="0dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="4dp"
                        android:text="@string/message_to_label"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/sender"
                        android:layout_toEndOf="@+id/to_label"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:paddingTop="2dp"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorSecondary" />

                    <!-- CC -->
                    <TextView
                        android:id="@+id/cc_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/to_label"
                        android:layout_alignBaseline="@+id/cc"
                        android:layout_alignStart="@+id/to_label"
                        android:paddingStart="0dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="4dp"
                        android:text="@string/message_view_cc_label"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/to"
                        android:layout_toEndOf="@+id/cc_label"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:paddingTop="2dp"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorSecondary" />

                    <!-- BCC -->
                    <TextView
                        android:id="@+id/bcc_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cc_label"
                        android:layout_alignBaseline="@+id/bcc"
                        android:layout_alignStart="@+id/cc_label"
                        android:paddingStart="0dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="4dp"
                        android:text="@string/message_view_bcc_label"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bcc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cc"
                        android:layout_toEndOf="@+id/bcc_label"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:paddingTop="2dp"
                        android:textAppearance="@style/TextAppearance.K9.MediumSmall"
                        android:textColor="?android:attr/textColorSecondary" />

                    <!-- Date -->
                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bcc"
                        android:layout_alignParentEnd="true"
                        android:ellipsize="none"
                        android:paddingTop="8dp"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.K9.Small"
                        android:textColor="?android:attr/textColorSecondary" />

                    <LinearLayout
                        android:id="@+id/status_icon_strip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/icon_single_message_options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackground"
                            android:padding="8dp"
                            app:srcCompat="?iconActionSingleMessageOptions" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--<View
        android:layout_height="0.5dip"
        android:layout_width="match_parent"
        android:layout_marginBottom="4dip"
        android:background="@drawable/divider_horizontal_email" />-->

</com.mail.ann.view.MessageHeader>
